force-app/main/default/objects/VisualAntidote__Event_Log__c/fields/VisualAntidote__Created_Time__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Created_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Created Time</label>
    <type>DateTime</type>
</CustomField>