force-app/main/default/objects/VisualAntidote__Event_Log__c/fields/VisualAntidote__Object_Info__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Object_Info__c</fullName>
    <label>Object Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>