force-app/main/default/objects/VisualAntidote__Event_Log__c/fields/VisualAntidote__Process__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Process__c</fullName>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FormResubmissions</fullName>
            </value>
            <value>
                <fullName>FormSubmissions</fullName>
            </value>
            <value>
                <fullName>InitialSubmission</fullName>
            </value>
            <value>
                <fullName>ProcessSObject</fullName>
            </value>
            <value>
                <fullName>SubmissionProcess</fullName>
            </value>
            <value>
                <fullName>InitialRender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>