force-app/main/default/objects/VisualAntidote__Event_Log__c/fields/VisualAntidote__Source__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>