force-app/main/default/objects/VisualAntidote__Event_Log__c/listViews/VisualAntidote__All.listView-meta.xml
<ListView>
    <fullName>VisualAntidote__All</fullName>
    <columns>VisualAntidote__Source__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>VisualAntidote__Detail__c</columns>
    <columns>NAME</columns>
    <columns>VisualAntidote__Process__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>VisualAntidote__Created_Time__c</columns>
    <columns>VisualAntidote__Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>