force-app/main/default/objects/VisualAntidote__Event_Log__c/listViews/VisualAntidote__Only_Initial_Render_Info.listView-meta.xml
<ListView>
    <fullName>VisualAntidote__Only_Initial_Render_Info</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>VisualAntidote__Created_Time__c</columns>
    <columns>VisualAntidote__Detail__c</columns>
    <columns>VisualAntidote__Object_Info__c</columns>
    <columns>VisualAntidote__Process__c</columns>
    <columns>VisualAntidote__Source__c</columns>
    <columns>VisualAntidote__Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VisualAntidote__Process__c</field>
        <operation>equals</operation>
        <value>InitialRender</value>
    </filters>
    <label>Only Initial Render Info</label>
</ListView>